fix: align home request plus icon

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3433,7 +3433,7 @@ body.home .site-footer .map-pulse {
     .request-plus {
         position: absolute;
         left: 48px;
-        top: 48px;
+        top: 83px;
         width: 40px;
         height: 40px;
         color: #EFEFEF;
